RESOLVED FIXED303980
[threaded-animations] `animations/resume-after-page-cache.html` crashes with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=303980
Summary [threaded-animations] `animations/resume-after-page-cache.html` crashes with ...
Antoine Quint
Reported 2025-12-11 00:29:39 PST
The test `animations/resume-after-page-cache.html` crashes when ran in a loop with "Threaded Time-based Animations" enabled.
Attachments
Antoine Quint
Comment 1 2025-12-11 00:44:06 PST
EWS
Comment 2 2025-12-11 09:34:34 PST
Committed 304301@main (cafb7b2f4caf): <https://commits.webkit.org/304301@main> Reviewed commits have been landed. Closing PR #55235 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-11 09:35:13 PST
Note You need to log in before you can comment on or make changes to this bug.